--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,7 @@ spring:
         git:
           uri: git@github.com:z1414351798/zzq-cloud-config.git
           default-label: master
+          searchPaths: resources
   security:
     oauth2:
       resourceserver:
